--- a/index.html
+++ b/index.html
@@ -775,6 +775,23 @@
           }
         });
       })();
+<style>
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+canvas {
+  position: fixed;
+  inset: 0;
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none;
+  z-index: -1;
+}
+</style>
+
     </script>
   </body>
 </html>
