--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 
     <style>
       html, body {
-        margin: 0;
-        height: 100%;
-        background: transparent;
-        overflow: hidden;
-      }
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  overflow: hidden;
+}
       #root {
-        position: fixed;
+        position: absolute;
         inset: 0;
         width: 100vw;
         height: 100vh;
@@ -24,7 +25,7 @@
       }
       canvas {
         display: block;
-        position: fixed;
+        position: absolute;
         inset: 0;
         width: 100vw;
         height: 100vh;
